samples/_failures_safe/1761085263_8c7cdf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0aa598ea.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_0aa598ea.c:167:9: error: expected declaration or statement at end of input
  167 |         case TOKEN_NUMBER: printf("NUMBER"); break;
      |         ^~~~
./samples/SAFE/__tmp_0aa598ea.c:167:9: error: expected declaration or statement at end of input
